tests/baselines/reference/extendsTag4.errors.txt
foo.js(11,1): error TS8022: JSDoc '@extends' is not attached to a class.


==== foo.js (1 errors) ====
    /**
     * @constructor
     */
    class A {
        constructor() {}
    }
    
    /**
     * @extends {A}
     */
    
    
!!! error TS8022: JSDoc '@extends' is not attached to a class.